--- a/TVar/Base.lproj/Main.storyboard
+++ b/TVar/Base.lproj/Main.storyboard
@@ -96,7 +96,116 @@
                     <view key="view" contentMode="scaleToFill" id="CxD-Dq-GSX">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="0.83137254900000002" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4By-ym-uqZ" userLabel="container">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PMS-Rc-SVv">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <view key="tableFooterView" contentMode="scaleToFill" id="kj6-al-j8C" userLabel="Header">
+                                            <rect key="frame" x="0.0" y="64" width="600" height="320"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <subviews>
+                                                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dfK-4F-pGU" userLabel="Video">
+                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="240"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mak-HX-9Pu" customClass="CusomImageView" customModule="TVar" customModuleProvider="target">
+                                                            <rect key="frame" x="0.0" y="0.0" width="600" height="240"/>
+                                                            <color key="backgroundColor" red="0.078431372549019607" green="0.10588235294117647" blue="0.15294117647058825" alpha="1" colorSpace="calibratedRGB"/>
+                                                        </imageView>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="btn_play" translatesAutoresizingMaskIntoConstraints="NO" id="XWV-Fl-Azi">
+                                                            <rect key="frame" x="280" y="100" width="40" height="40"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="40" id="kZ1-To-g3w"/>
+                                                                <constraint firstAttribute="height" constant="40" id="xjv-p7-0fX"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="mak-HX-9Pu" firstAttribute="leading" secondItem="dfK-4F-pGU" secondAttribute="leading" id="5W8-D4-cS3"/>
+                                                        <constraint firstAttribute="centerX" secondItem="XWV-Fl-Azi" secondAttribute="centerX" id="7G0-yK-iTL"/>
+                                                        <constraint firstAttribute="centerY" secondItem="XWV-Fl-Azi" secondAttribute="centerY" id="Bh7-j3-cEh"/>
+                                                        <constraint firstAttribute="height" constant="240" id="Cwv-Le-KjZ"/>
+                                                        <constraint firstAttribute="bottom" secondItem="mak-HX-9Pu" secondAttribute="bottom" id="HJS-V4-ShZ"/>
+                                                        <constraint firstItem="mak-HX-9Pu" firstAttribute="top" secondItem="dfK-4F-pGU" secondAttribute="top" id="Pkk-KG-jvW"/>
+                                                        <constraint firstAttribute="trailing" secondItem="mak-HX-9Pu" secondAttribute="trailing" id="oFj-YK-bIq"/>
+                                                    </constraints>
+                                                </view>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5c9-Gs-ADe" userLabel="Description">
+                                                    <rect key="frame" x="0.0" y="240" width="600" height="80"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IyY-AO-XbF" customClass="CusomImageView" customModule="TVar" customModuleProvider="target">
+                                                            <rect key="frame" x="10" y="10" width="45" height="45"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="45" id="Y3r-0i-YNF"/>
+                                                                <constraint firstAttribute="height" constant="45" id="elX-pk-4y1"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OcV-Zw-Mds">
+                                                            <rect key="frame" x="65" y="36" width="525" height="25"/>
+                                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
+                                                            <color key="textColor" red="0.30980392159999998" green="0.34901960780000002" blue="0.36862745099999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UserName" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5k4-76-pWN">
+                                                            <rect key="frame" x="65" y="10" width="73" height="21"/>
+                                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                                            <color key="textColor" red="0.59215686270000001" green="0.63137254899999995" blue="0.65098039220000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1時間前" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yKB-XA-Upg">
+                                                            <rect key="frame" x="532" y="10" width="58" height="22"/>
+                                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
+                                                            <color key="textColor" red="0.59215686270000001" green="0.63137254899999995" blue="0.65098039220000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="IyY-AO-XbF" firstAttribute="top" secondItem="5k4-76-pWN" secondAttribute="top" id="1za-6j-Xs1"/>
+                                                        <constraint firstItem="OcV-Zw-Mds" firstAttribute="leading" secondItem="5k4-76-pWN" secondAttribute="leading" id="9Z2-kC-BOk"/>
+                                                        <constraint firstItem="5k4-76-pWN" firstAttribute="leading" secondItem="IyY-AO-XbF" secondAttribute="trailing" constant="10" id="Kr2-w1-6Xd"/>
+                                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="IyY-AO-XbF" secondAttribute="bottom" constant="10" id="LjB-Rg-wlr"/>
+                                                        <constraint firstItem="OcV-Zw-Mds" firstAttribute="top" secondItem="5k4-76-pWN" secondAttribute="bottom" constant="5" id="Wm8-nG-91E"/>
+                                                        <constraint firstItem="IyY-AO-XbF" firstAttribute="leading" secondItem="5c9-Gs-ADe" secondAttribute="leading" constant="10" id="bel-Jf-OGs"/>
+                                                        <constraint firstAttribute="height" constant="80" id="c65-t6-gK7"/>
+                                                        <constraint firstAttribute="trailing" secondItem="yKB-XA-Upg" secondAttribute="trailing" constant="10" id="kef-Tm-jEb"/>
+                                                        <constraint firstAttribute="trailing" secondItem="OcV-Zw-Mds" secondAttribute="trailing" constant="10" id="m54-39-UDw"/>
+                                                        <constraint firstItem="yKB-XA-Upg" firstAttribute="centerY" secondItem="5k4-76-pWN" secondAttribute="centerY" id="mit-3e-7Zq"/>
+                                                        <constraint firstItem="IyY-AO-XbF" firstAttribute="top" secondItem="5c9-Gs-ADe" secondAttribute="top" constant="10" id="sn1-M7-4R1"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="5c9-Gs-ADe" secondAttribute="trailing" id="3Kl-fC-K2B"/>
+                                                <constraint firstItem="dfK-4F-pGU" firstAttribute="leading" secondItem="kj6-al-j8C" secondAttribute="leading" id="59G-90-SwA"/>
+                                                <constraint firstAttribute="bottom" secondItem="5c9-Gs-ADe" secondAttribute="bottom" id="74X-xG-L9C"/>
+                                                <constraint firstItem="dfK-4F-pGU" firstAttribute="top" secondItem="kj6-al-j8C" secondAttribute="top" id="Fgx-YT-TeE"/>
+                                                <constraint firstAttribute="trailing" secondItem="dfK-4F-pGU" secondAttribute="trailing" id="h4z-SK-duP"/>
+                                                <constraint firstItem="5c9-Gs-ADe" firstAttribute="leading" secondItem="kj6-al-j8C" secondAttribute="leading" id="om6-J7-2jp"/>
+                                                <constraint firstItem="5c9-Gs-ADe" firstAttribute="top" secondItem="dfK-4F-pGU" secondAttribute="bottom" id="uFk-dh-xbe"/>
+                                            </constraints>
+                                        </view>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <gestureRecognizers/>
+                                <constraints>
+                                    <constraint firstItem="PMS-Rc-SVv" firstAttribute="top" secondItem="4By-ym-uqZ" secondAttribute="top" id="3as-WN-q9X"/>
+                                    <constraint firstItem="PMS-Rc-SVv" firstAttribute="leading" secondItem="4By-ym-uqZ" secondAttribute="leading" id="DmW-p2-IMx"/>
+                                    <constraint firstAttribute="bottom" secondItem="PMS-Rc-SVv" secondAttribute="bottom" id="E2g-83-8U8"/>
+                                    <constraint firstAttribute="trailing" secondItem="PMS-Rc-SVv" secondAttribute="trailing" id="nWJ-7R-Pzp"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.078431372550000003" green="0.1058823529" blue="0.1529411765" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="jTr-xC-cfN" firstAttribute="top" secondItem="4By-ym-uqZ" secondAttribute="bottom" id="1J7-s3-W0Y"/>
+                            <constraint firstAttribute="trailing" secondItem="4By-ym-uqZ" secondAttribute="trailing" id="Jb3-wh-Wg2"/>
+                            <constraint firstItem="4By-ym-uqZ" firstAttribute="top" secondItem="CxD-Dq-GSX" secondAttribute="top" id="wJM-Fk-VKZ"/>
+                            <constraint firstItem="4By-ym-uqZ" firstAttribute="leading" secondItem="CxD-Dq-GSX" secondAttribute="leading" id="yI5-jb-lhC"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Vky-Qv-skQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -122,4 +231,7 @@
             <point key="canvasLocation" x="835" y="335"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="btn_play" width="121" height="121"/>
+    </resources>
 </document>
